fix: 채점중 white-space: nowrap

--- a/styles/components/code/output.module.scss
+++ b/styles/components/code/output.module.scss
@@ -84,4 +84,5 @@
   font-size: 0.875rem;
   color: $white-dark-color;
   text-align: left;
+  white-space: nowrap;
 }
